--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react-avia",
   "version": "0.1.0",
   "private": true,
+  "author": "WebShining(Artem)",
+  "description": "Пратика з технологій 'Створення программи Авіарейсу'",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
